--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
     "firebase": "^10.6.0",
-    "next": "13.5.4",
+    "next": "^14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "daisyui": "^4.4.2"
   }
 }
