--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@types/react": "18.2.26",
     "@types/react-dom": "18.2.11",
     "autoprefixer": "10.4.16",
+    "chart.js": "^4.4.1",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
-    "firebase": "^10.6.0",
+    "firebase": "^10.7.1",
     "next": "^14.0.3",
     "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "victory": "^36.7.0"
   },
   "devDependencies": {
     "daisyui": "^4.4.2"
